--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1>PROYECTO HOLA MUNDO</h1> 
+   <h2>Subtítulo del proyecto</h2>
 </body>
 </html>
