Se ha modificado el contenido de H3

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
    <h1>PROYECTO HOLA MUNDO</h1> 
    <h2>Subtítulo del proyecto</h2>
-   <h3>NUEVO SUBTITULO</h3>
+   <h3>SUBTITULO MODIFICADO</h3>
 </body>
 </html>
