--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
    <h2>Subtítulo del proyecto</h2>
    <h3>SUBTITULO MODIFICADO</h3>
    <h4>Cuarto título</h4>
+
+   <form action="#" method="get">
+       <input type="button" value="Enviar">
+   </form>
 </body>
 </html>
